Add new things endpoint
