# apidoc/openapi-spec.yml
@@ -12,16 +12,19 @@ info:
     url: https://github.com/linksmart/thing-directory/blob/master/LICENSE
 
 tags:
-  - name: td
+  - name: things
     description: Registration API
   - name: search
     description: Search API
   - name: validation
     description: Validation API
+  - name: td
+    description: Registration API (deprecated)
 
 paths:
   /td:
     get:
+      deprecated: true
       tags:
         - td
       summary: Retrieves paginated list of Thing Descriptions
@@ -64,6 +67,7 @@ paths:
         '500':
           $ref: '#/components/responses/RespInternalServerError'
     post:
+      deprecated: true
       tags:
         - td
       summary: Creates new Thing Description with system-generated ID
@@ -100,6 +104,7 @@ paths:
         required: true
   /td/{id}:
     put:
+      deprecated: true
       tags:
         - td
       summary: Creates a new Thing Description with the provided ID, or updates an existing one
@@ -140,6 +145,7 @@ paths:
         description: The Thing Description object
         required: true
     patch:
+      deprecated: true
       tags:
         - td
       summary: Patch a Thing Description
@@ -176,6 +182,7 @@ paths:
         description: The Thing Description object
         required: true
     get:
+      deprecated: true
       tags:
         - td
       summary: Retrieves a Thing Description
@@ -208,8 +215,219 @@ paths:
         '500':
           $ref: '#/components/responses/RespInternalServerError'
     delete:
+      deprecated: true
       tags:
         - td
+      summary: Deletes the Thing Description
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Thing Description
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '404':
+          $ref: '#/components/responses/RespNotfound'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+
+  /things:
+    get:
+      tags:
+        - things
+      summary: Retrieves paginated list of Thing Descriptions
+      description: The query languages, described [here](https://github.com/linksmart/thing-directory/wiki/Query-Language), can be used to filter results and fetch parts of Thing Descriptions.
+      parameters:
+        - $ref: '#/components/parameters/ParamPage'
+        - $ref: '#/components/parameters/ParamPerPage'
+        - name: jsonpath
+          in: query
+          description: JSONPath expression for fetching specific items. E.g. `$[?(@.title=='Kitchen Lamp')].properties`
+          required: false
+          deprecated: true
+          schema:
+            type: string
+          # example: $[?(@.title=='Kitchen Lamp')].properties
+        - name: xpath
+          in: query
+          description: xPath 3.0 expression for fetching specific items. E.g. `//*[title='Kitchen Lamp']/properties`
+          required: false
+          deprecated: true
+          schema:
+            type: string
+          # example: //*[title='Kitchen Lamp']/properties
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/ld+json:
+              schema:
+                $ref: '#/components/schemas/ThingDescriptionPage'
+              examples:
+                ThingDescriptionList:
+                  $ref: '#/components/examples/ThingDescriptionList'
+        '400':
+          $ref: '#/components/responses/RespBadRequest'
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+    post:
+      tags:
+        - things
+      summary: Creates new Thing Description with system-generated ID
+      description: |
+        This is to create a TD and receive a unique system-generated `id` in response.<br>
+        The server rejects the request if there is an `id` in the body.<br>
+        For creating a TD with user-defined `id`, use the `PUT` method.
+      responses:
+        '201':
+          description: Created successfully
+          headers:
+            Location:
+              description: Path to the newly created Thing Description
+              schema:
+                type: string
+        '400':
+          $ref: '#/components/responses/RespValidationBadRequest'
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+      requestBody:
+        content:
+          application/ld+json:
+            schema:
+              type: object
+            examples:
+              ThingDescription:
+                $ref: '#/components/examples/ThingDescriptionWithoutID'
+
+        description: Thing Description to be created
+        required: true
+  /things/{id}:
+    put:
+      tags:
+        - things
+      summary: Creates a new Thing Description with the provided ID, or updates an existing one
+      description: |
+        The `id` in the path is the resource id and must match the one in Thing Description.<br>
+        For creating a TD without user-defined `id`, use the `POST` method.
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Thing Description
+          example: "urn:example:1234"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Thing Description updated successfully
+        '201':
+          description: A new Thing Description is created
+        '400':
+          $ref: '#/components/responses/RespValidationBadRequest'
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '409':
+          $ref: '#/components/responses/RespConflict'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+      requestBody:
+        content:
+          application/ld+json:
+            schema:
+              type: object
+            examples:
+              ThingDescription:
+                $ref: '#/components/examples/ThingDescriptionWithID'
+        description: The Thing Description object
+        required: true
+    patch:
+      tags:
+        - things
+      summary: Patch a Thing Description
+      description: The patch document must be based on RFC7396 JSON Merge Patch
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Thing Description
+          example: "urn:example:1234"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Thing Description patched successfully
+        '400':
+          $ref: '#/components/responses/RespValidationBadRequest'
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '409':
+          $ref: '#/components/responses/RespConflict'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+      requestBody:
+        content:
+          application/merge-patch+json:
+            schema:
+              type: object
+            examples:
+              ThingDescription:
+                $ref: '#/components/examples/ThingDescriptionWithID'
+        description: The Thing Description object
+        required: true
+    get:
+      tags:
+        - things
+      summary: Retrieves a Thing Description
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Thing Description
+          example: "urn:example:1234"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/ld+json:
+              schema:
+                type: object
+              examples:
+                response:
+                  $ref: '#/components/examples/ThingDescriptionWithID'
+        '400':
+          $ref: '#/components/responses/RespBadRequest'
+        '401':
+          $ref: '#/components/responses/RespUnauthorized'
+        '403':
+          $ref: '#/components/responses/RespForbidden'
+        '404':
+          $ref: '#/components/responses/RespNotfound'
+        '500':
+          $ref: '#/components/responses/RespInternalServerError'
+    delete:
+      tags:
+        - things
       summary: Deletes the Thing Description
       parameters:
         - name: id
